# indico-operator

./: .bandit  .collections-config.yaml  .copilot-collections.yaml  .dockerignore  .flake8  .gitignore  .jujuignore  .licenserc.yaml  .trivyignore  .vale.ini  .woke.yaml  CODEOWNERS  CONTRIBUTING.md  COPILOT_PERMISSIONS_CHECK.md  Makefile  Makefile.docs  README.md  ZAP.md  actions.yaml  charmcraft.yaml  config.yaml  coverage.txt  ej  generate-src-docs.sh  index.html  indico-nginx.Dockerfile  indico.Dockerfile  install.sh  juju-crashdump-3a013e6e-9e7a-4bac-886e-c066af37e804.tar.xz  juju-crashdump-60a42353-34e9-4dab-ac4a-bc366692eb40.tar.xz  juju-crashdump-66b3c0a1-124a-4432-854c-bf115d1e773b.tar.xz  juju-crashdump-919a96b0-9a32-4579-b00f-9fd2a5cc4b83.tar.xz  juju-crashdump-ac0db597-a284-465d-8c56-cbcf6b1cdf66.tar.xz  juju-crashdump-ad9298f5-4f9a-4ed4-95c5-9701901fc565.tar.xz  juju-crashdump-c9b7a1c6-41ff-45e8-acbc-cfbeb2701521.tar.xz  juju-crashdump-d57f25d9-297d-48b7-bea0-468f30aa0f2e.tar.xz  juju-crashdump-fb1f252a-59f8-459a-bc75-bc71ae09b5dc.tar.xz  metadata.yaml  mommyshark  pyproject.toml  (+6 more)
.github/: .jira_sync_config.yaml  copilot-instructions-release-notes.md  copilot-instructions.md  pull_request_template.md
1625/: index.html
1627/: index.html
1628/: index.html
1629/: index.html
1630/: index.html
1631/: index.html
1632/: index.html
1633/: index.html
1634/: index.html
1650/: index.html
1651/: index.html
1656/: index.html
1663/: index.html
1665/: index.html
1680/: index.html
1687/: index.html
1707/: index.html
1728/: index.html
1729/: index.html
1730/: index.html
1738/: index.html
1743/: index.html
1747/: index.html
indico_rock/plugins/autocreate/: README.md  setup.cfg  setup.py
indico_rock/plugins/autocreate/autocreate/: __init__.py  cli.py  plugin.py
plugins/autocreate/: setup.cfg
plugins/autocreate/autocreate/: __init__.py  cli.py  plugin.py
(+2321 files in other folders)
