[metadata]
name = indico-plugin-autocreate
version = 3.2
description = Extends the indico CLI to add a non-interactive way to create users
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/canonical/indico-operator
license = MIT
author = nrobinaubertin
author_email = niels.robin-aubertin@canonical.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    autocreate = autocreate.plugin:AutocreatePlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213
